--- a/index.html
+++ b/index.html
@@ -2,14 +2,39 @@
 <html>
   <head>
     <title>css battleground</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./index.css"">
   </head>
   <body>
     <main>
-      <div class="span2">1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
+      <div class="span2">
+        The grid CSS property is a shorthand property that sets all of the explicit and implicit
+        grid properties in a single declaration. Using grid you specify one axis using
+        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
+        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
+        grid-auto-flow.
+      </div>
+      <div>
+        The grid CSS property is a shorthand property that sets all of the explicit and implicit
+        grid properties in a single declaration. Using grid you specify one axis using
+        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
+        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
+        grid-auto-flow.
+      </div>
+      <div>
+        The grid CSS property is a shorthand property that sets all of the explicit and implicit
+        grid properties in a single declaration. Using grid you specify one axis using
+        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
+        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
+        grid-auto-flow.
+      </div>
+      <div>
+        The grid CSS property is a shorthand property that sets all of the explicit and implicit
+        grid properties in a single declaration. Using grid you specify one axis using
+        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
+        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
+        grid-auto-flow.
+      </div>
       <div>5</div>
       <div>6</div>
       <div>7</div>
