--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" type="text/css" href="./index.css"">
   </head>
   <body>
+    <header>HEADER</header>
     <main>
-      <div class="span2">
+      <div class="span2" onclick="console.log('test')">
         The grid CSS property is a shorthand property that sets all of the explicit and implicit
         grid properties in a single declaration. Using grid you specify one axis using
         grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
@@ -37,7 +38,7 @@
       </div>
       <div>5</div>
       <div>6</div>
-      <div>7</div>
+      <div></div>
     </main>
   </body>
 </html>
