--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
         grid-auto-flow.
       </div>
-      <div>5</div>
+      <div class="moveInGrid">5</div>
       <div>6</div>
       <div></div>
     </main>
