--- a/index.html
+++ b/index.html
@@ -8,33 +8,22 @@
   <body>
     <header>HEADER</header>
     <main>
-      <div class="span2" onclick="console.log('test')">
+      <div class="span2">
         The grid CSS property is a shorthand property that sets all of the explicit and implicit
         grid properties in a single declaration. Using grid you specify one axis using
         grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
         in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
         grid-auto-flow.
       </div>
-      <div>
-        The grid CSS property is a shorthand property that sets all of the explicit and implicit
-        grid properties in a single declaration. Using grid you specify one axis using
-        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
-        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
-        grid-auto-flow.
-      </div>
-      <div>
-        The grid CSS property is a shorthand property that sets all of the explicit and implicit
-        grid properties in a single declaration. Using grid you specify one axis using
-        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
-        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
-        grid-auto-flow.
-      </div>
-      <div>
-        The grid CSS property is a shorthand property that sets all of the explicit and implicit
-        grid properties in a single declaration. Using grid you specify one axis using
-        grid-template-rows or grid-template-columns, you then specify how content should auto-repeat
-        in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
-        grid-auto-flow.
+      <div>2</div>
+      <div>3</div>
+      <div class="image">
+        <img
+          src="https://d2n9h2wits23hf.cloudfront.net/image/v1/static/6057949432001/a369fa8a-74d7-4cbb-9533-5443d345f623/20632378-b946-4356-8499-2dabf9a00188/1316x740/match/image.jpg"
+          alt="f1"
+          width="329"
+          height="185"
+        />
       </div>
       <div class="moveInGrid">5</div>
       <div>6</div>
