--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         in the other axis using the implicit grid properties: grid-auto-rows, grid-auto-columns, and
         grid-auto-flow.
       </div>
-      <div>2</div>
+      <div class="buttons">
+        <button type="button">button</button>
+        <button type="button" disabled>button</button>
+      </div>
       <div>3</div>
       <div class="image">
         <img
