--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <div>1</div>
         <div shrink>2</div>
         <div grow>3</div>
-        <div>4</div>
+        <div class="specificity" id="specificity" specificity style="background: rgb(90, 2, 77)">
+          4
+        </div>
       </div>
     </main>
     <div class="classSpecificity" id="idSpecificity" />
