--- a/index.html
+++ b/index.html
@@ -32,11 +32,20 @@
       <div>6</div>
       <div class="flex">
         <div>1</div>
-        <div shrink>2</div>
-        <div grow>3</div>
-        <div class="specificity" id="specificity" specificity style="background: rgb(90, 2, 77)">
-          4
+        <div data-shrink>2</div>
+        <div data-grow>3</div>
+        <div
+          class="specificity"
+          id="specificity"
+          specificity
+          style="background: rgba(147, 147, 147, 0.408)"
+        >
+          444444444444444444444444444444444444444444444444
         </div>
+      </div>
+      <div data-flex>
+        <div>item1</div>
+        <div>item2</div>
       </div>
     </main>
     <div class="classSpecificity" id="idSpecificity" />
