--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         </div>
       </div>
       <div data-flex>
-        <div>item1</div>
-        <div>item2</div>
+        <div id="a"></div>
+        <div id="b"></div>
+        <div id="c""></div>
       </div>
     </main>
     <div class="classSpecificity" id="idSpecificity" />
