--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
         <div id="b"></div>
         <div id="c""></div>
       </div>
+      <div class="sizes">
+        <p data-ch>ch</p>
+        <div class="percentageMarginAndPadding">% margin and padding</div>
+      </div>
+      <div class="fancyBtn">
+        <div class="background">
+          <div class="button">fancy</div>
+        </div>
+      </div>
+      <div class="selectors">
+        <div>1</div>
+        <div data-type="abc">2</div>
+      </div>
     </main>
     <div class="classSpecificity" id="idSpecificity" />
   </body>
