--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
           id="specificity"
           specificity
           style="background: rgba(147, 147, 147, 0.408)"
-        >
-          444444444444444444444444444444444444444444444444
+        >4
         </div>
       </div>
       <div data-flex>
@@ -52,10 +51,8 @@
         <p data-ch>ch</p>
         <div class="percentageMarginAndPadding">% margin and padding</div>
       </div>
-      <div class="fancyBtn">
-        <div class="background">
-          <div class="button">fancy</div>
-        </div>
+      <div data-drop="false" class="dropDown" onclick="this.dataset.drop = this.dataset.drop === 'false'">
+          dropdown
       </div>
       <div class="selectors">
         <div>1</div>
